--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="text_view_desc_main_activity">This is a new app to see all the characters from marvel</string>
     <string name="button_text_main_activity">GO TO THE APP</string>
     <string name="title_character_list_activity">Characters</string>
+    <string name="desc_text_view_list_characters">List of characters</string>
+    <string name="character_list_loader">Loading</string>
+    <string name="character_list_error_not_found">Characters not found</string>
+    <string name="character_list_general_error">Something happened, try again later</string>
 </resources>
