--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,9 @@
     <string name="character_list_general_error">Something happened, try again later</string>
     <string name="subtitle_list_characters">List of characters</string>
     <string name="empty_description">This character has no description</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="character_image_content_desc">Character image</string>
+    <string name="text_view_character_detail">Character:</string>
+    <string name="character_detail_not_found">Character not found, try with another</string>
+    <string name="button_text_fragment">Exit</string>
 </resources>
